--- a/leetcode/src/main/resources/application.properties
+++ b/leetcode/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.servlet.context-path=/leetcode
+server.servlet.context-path = /leetcode
+
+spring.redis.host = 127.0.0.1
+spring.redis.password = foobared
+
