--- a/leetcode/src/main/resources/application.properties
+++ b/leetcode/src/main/resources/application.properties
@@ -1,5 +1,41 @@
-server.servlet.context-path = /leetcode
+server.servlet.context-path=/leetcode
 
-spring.redis.host = 127.0.0.1
-spring.redis.password = foobared
+# data source configuration
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/local_test?useUnicode=true&characterEncoding=utf8mb4
+spring.datasource.data-username=root
+spring.datasource.data-password=
+# 初始化连接大小
+spring.druid.initialSize=5
+# 最小连接池数量
+spring.druid.minIdle=5
+# 最大连接池数量
+spring.druid.maxActive=20
+# 获取连接时最大等待时间，单位毫秒
+spring.druid.maxWait=60000
+# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+spring.druid.timeBetweenEvictionRunsMillis=60000
+# 配置一个连接在池中最小生存的时间，单位是毫秒
+spring.druid.minEvictableIdleTimeMillis=300000
+# 测试连接
+spring.druid.validationQuery=SELECT 1 FROM DUAL
+# 申请连接的时候检测，建议配置为true，不影响性能，并且保证安全性
+spring.druid.testWhileIdle=true
+# 获取连接时执行检测，建议关闭，影响性能
+spring.druid.testOnBorrow=false
+# 归还连接时执行检测，建议关闭，影响性能
+spring.druid.testOnReturn=false
+# 是否开启PSCache，PSCache对支持游标的数据库性能提升巨大，oracle建议开启，mysql下建议关闭
+spring.druid.poolPreparedStatements=false
+# 开启poolPreparedStatements后生效
+spring.druid.maxPoolPreparedStatementPerConnectionSize=20
+# 配置扩展插件，常用的插件有 => stat:监控统计 log4j:日志 wall:防御sql注入
+spring.druid.filters=stat,wall,log4j
+# 通过connectProperties属性来打开mergeSql功能;慢SQL记录
+spring.druid.connectionProperties='druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000'
+
+# redis configuration
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=foobared
 
