--- a/leetcode/src/main/resources/application.properties
+++ b/leetcode/src/main/resources/application.properties
@@ -1,16 +1,3 @@
 server.servlet.context-path=/leetcode
-
-# data source configuration
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/local_test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
-spring.datasource.data-username=root
-spring.datasource.data-password=
-
-# druid configuration(choosable)
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-
-# redis configuration
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.password=foobared
-
+# 生产/开发等环境配置, 加载不同的配置文件
+spring.profiles.active=dev
