--- a/leetcode/src/main/resources/application-dev.properties
+++ b/leetcode/src/main/resources/application-dev.properties
@@ -2,9 +2,9 @@
 
 # data source configuration
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/local_test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test_first?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 spring.datasource.data-username=root
-spring.datasource.data-password=
+spring.datasource.data-password=123456
 
 # druid configuration(choosable)
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
