--- a/leetcode/pom.xml
+++ b/leetcode/pom.xml
@@ -114,6 +114,11 @@
             <version>3.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
