--- a/leetcode/src/main/resources/application-dev.properties
+++ b/leetcode/src/main/resources/application-dev.properties
@@ -7,17 +7,22 @@ spring.datasource.data-username=root
 spring.datasource.data-password=123456
 # datasource 2
 # data source configuration mysql5
-spring.datasource.driver-class-name-5=com.mysql.cj.jdbc.Driver
-spring.datasource.url-5=jdbc:mysql://rm-uf658580z4h70ymzi.mysql.rds.aliyuncs.com:3306/ssp2_test?serverTimezone=Asia/Shanghai&useSSL=false&useUnicode=true&characterEncoding=utf8
-spring.datasource.data-username-5=ssp2_test
-spring.datasource.data-password-5=nldFHKkIUuTpG71i
+#spring.datasource.driver-class-name-5=com.mysql.cj.jdbc.Driver
+#spring.datasource.url-5=jdbc:mysql://rm-uf658580z4h70ymzi.mysql.rds.aliyuncs.com:3306/ssp2_test?serverTimezone=Asia/Shanghai&useSSL=false&useUnicode=true&characterEncoding=utf8
+#spring.datasource.data-username-5=ssp2_test
+#spring.datasource.data-password-5=nldFHKkIUuTpG71i
 
 
 # druid configuration(choosable)
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
+# mybatis
+mybatis.type-aliases-package=com.lunx.dao.mapper
+mybatis.mapper-locations=classpath:com/lunx/dao/mapper/*.xml
+
 # redis configuration
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.password=foobared
+
 
