--- a/leetcode/pom.xml
+++ b/leetcode/pom.xml
@@ -119,6 +119,13 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!-- Mybatis -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
