--- a/leetcode/pom.xml
+++ b/leetcode/pom.xml
@@ -129,6 +129,11 @@
             <version>2.1.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.70</version>
+        </dependency>
 
     </dependencies>
 
