--- a/leetcode/src/main/resources/application-dev.properties
+++ b/leetcode/src/main/resources/application-dev.properties
@@ -1,5 +1,7 @@
 #server.servlet.context-path=/leetcode
 
+logging.level.root=debug
+
 # data source configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test_first?serverTimezone=Asia/Shanghai&useSSL=false&useUnicode=true&characterEncoding=utf8
